fix some code style